fix: was missing part of the ghe integration
Signed-off-by: Glenn Marcy <gmarcy@us.ibm.com>

--- a/ansible/roles/install_developer_hub/tasks/main.yml
+++ b/ansible/roles/install_developer_hub/tasks/main.yml
@@ -74,6 +74,8 @@
               integrations:
                 github:
                 - host: github.ibm.com
+                  apiBaseUrl: https://github.ibm.com/api/v3
+                  token: ${GHE_ACCESS_TOKEN}
               signInPage: github
       register: _result
 
